--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Note</title>
+    <link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 <body>
     Hello, My Note
